[package]
name = "teleport"
version = "0.1.0"
authors = ["chris-belcher <chris-belcher@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.12.0"
#bitcoincore-rpc = {git="https://github.com/rust-bitcoin/rust-bitcoincore-rpc"}
bitcoin-wallet = "1.1.0"
bitcoin = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.3", features = ["full"] }
futures = "0.3"
rand = "0.7.3"
itertools = "0.9.0"
structopt = "0.3.21"
dirs = "3.0.1"

#Empty default feature set, (helpful to generalise in github actions)
[features]
default = [] 

